Add my website files

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Architects of progress, builders of dreams, champions of innovation. Redefining industry standards for a brighter future"
     />
-    <link rel="icon" href="%PUBLIC_URL%/./logotest.jpg">
+    <link rel="icon" href="%PUBLIC_URL%/./embud_logo.png">
     <title>EMBUD</title>
   </head>
   <body>
